Feat: Add key generator

--- a/app/ui/legacy/src/main/res/values/strings.xml
+++ b/app/ui/legacy/src/main/res/values/strings.xml
@@ -1343,4 +1343,7 @@ You can keep this message and use it as a backup for your secret key. If you wan
     <string name="clipboard_label_email_address">Email address</string>
     <!-- A user visible label for the name and email address copied to the clipboard -->
     <string name="clipboard_label_name_and_email_address">Name and email address</string>
+    <string name="key_action">Key Generator</string>
+    <string name="hint_private_key">Private Key</string>
+    <string name="hint_public_key">Public key will be shown here</string>
 </resources>
